fixing responsive issue of separate map page(desktop screens)

--- a/src/app/pages/separatemap/separatemap.html
+++ b/src/app/pages/separatemap/separatemap.html
@@ -1,5 +1,5 @@
 <template args="model">
-        <main id="maincontent" class="hide-until-loaded {model.loaded}">
+        <main id="maincontent" class="separate-map-main hide-until-loaded {model.loaded}">
             <div id="mapd"  class="mapd" skip="true"></div>
             <div id="backToImpact_div" class="backToImpact_div">
                 <button id="backToImpact_btn" class="backToImpact_btn" href="/impact-dev">
