--- a/src/app/pages/separatemap/separatemap.html
+++ b/src/app/pages/separatemap/separatemap.html
@@ -1,5 +1,5 @@
 <template args="model">
-        <main id="maincontent" class="hide-until-loaded {model.loaded}">
+        <main id="maincontent" class="separate-map-main hide-until-loaded {model.loaded}">
             <div id="mapd"  class="mapd" skip="true"></div>
             <div id="back-impact-div" class="back-impact-div">
                 <button id="back-impact-btn" class="back-impact-btn" href="/impact-dev">
