Fix FAQ header text content width

--- a/src/app/pages/faq/faq.html
+++ b/src/app/pages/faq/faq.html
@@ -2,7 +2,7 @@
     <div if="model.heading" class="hero">
         <div class="boxed">
             <h1>{model.heading}</h1>
-            <p data-html="subhead"></p>
+            <div class="text-content" data-html="subhead"></div>
         </div>
     </div>
     <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
