--- a/src/app/pages/impact-dev/studentinfo/studentinfo.html
+++ b/src/app/pages/impact-dev/studentinfo/studentinfo.html
@@ -1,29 +1,33 @@
 <template args="model">
 
-        <div class="first-photo">
-            <div class="girl-txtdiv">
-                <div class="girl-txt-head">Ready to join the OpenStax movement?</div>
-                <p class="girl-txt-body">We’re proud of how far we’ve come, but we need YOU to continue our mission of increasing student access to education.
-                    Let us know you're using OpenStax and put your school on the map!</p>
-                <div><button class="sbox">I'm using OpenStax</button></div>
-            </div>
-            <div class="girl-imgdiv">
-                <img class="girl-img" src="/images/home/girl-join-the-movement.png" alt="Student">
-            </div>
+    <div class="first-photo">
+        <div class="girl-txtdiv">
+            <div class="girl-txt-head">Ready to join the OpenStax movement?</div>
+            <p class="girl-txt-body">
+                We’re proud of how far we’ve come, but we need YOU to continue
+                our mission of increasing student access to education. Let us
+                know you're using OpenStax and put your school on the map!
+            </p>
+            <div><button class="sbox">I'm using OpenStax</button></div>
         </div>
+        <div class="girl-imgdiv">
+            <img class="girl-img" src="/images/home/girl-join-the-movement.png" alt="Student">
+        </div>
+    </div>
 
-        <div class="second-photo">
+    <div class="second-photo">
         <div class="stds-imgdiv">
-
             <img class="stds-img" src="/images/home/students-want-to-help.png" alt="Student">
         </div>
 
         <div class="std-txtdiv">
             <div class="std-txt-head">Want to help?</div>
-            <p class="std-txt-body">OpenStax is Rice University’s nonprofit education initiative, which means that we rely on our supporters to grow
-                and expand our library. With your help, we can bring open education resources to even more students across the
-                world.</p>
-                <br>
+            <p class="std-txt-body">
+                OpenStax is Rice University’s nonprofit education initiative,
+                which means that we rely on our supporters to grow and expand
+                our library. With your help, we can bring open education
+                resources to even more students across the world.
+            </p>
             <div><button class="sbox">I'm using OpenStax</button></div>
         </div>
     </div>
