Update switch and type of insititution dropdwon

--- a/src/app/pages/impact-dev/map/mapdropdown.html
+++ b/src/app/pages/impact-dev/map/mapdropdown.html
@@ -13,7 +13,7 @@
                     <i id="icon-{element.pk}" class="fa fa-chevron-down angle-circle" aria-hidden="true"></i>
                 </div>
             </div>
-            <div id="data-{element.pk}" class="toggle-datalist data-{element.pk}">
+            <div id="data-{element.pk}" class="toggle-dataList data-{element.pk}">
                 <div class="detailinfo-{element.pk} detailinfo-container"></div>
                 <div id="testimonialBody-{element.pk}" class="testimonialBody-{element.pk}"></div>
             </div>
