--- a/src/app/pages/impact-dev/map/map.html
+++ b/src/app/pages/impact-dev/map/map.html
@@ -28,37 +28,39 @@
 
                 <div id="filter_d" class="filter-div">
                         <div class="filter-container">
-                                <div class="institute-prtnr">
+                                <div class="institute-prtnr filter-item">
                                         <label class="label-text">OpenStax institutional partners</label>
                                         <label class="switch institute-prtnr-toggle">
                                                 <input class='toggleCheck' name="route" type="checkbox" id="prtnrCheckBox" value="false">
                                                 <span class="slider round"></span>
                                         </label>
                                 </div>
-                                <div class="type-institute">
+                                <div class="type-institute filter-item">
                                         <label id="type_institute_txt" class="label-text">Type of Insititution</label>
-                                        <select class="switch type-institute-toggle">
-                                                <option value="all">All</option>
-                                                <option value="college">College</option>
-                                                <option value="university">University</option>
-                                        </select>
+                                        <div class="switch-wrap">
+                                            <select class="switch type-institute-toggle">
+                                                    <option value="all">All</option>
+                                                    <option value="college">College</option>
+                                                    <option value="university">University</option>
+                                            </select>
+                                        </div>
                                 </div>
-                                <div class="one-million">
+                                <div class="one-million filter-item">
                                         <label id="one_million_txt" class="label-text">Schools that have saved over $1 million</label>
                                         <label class="switch one-million-toggle">
                                                 <input class='toggleCheck' name="route" type="checkbox" id="one_millionCheckBox" value="false">
                                                 <span class="slider round"></span>
                                         </label>
                                 </div>
-                                <div class="testmonal">
-                                        <label id="testmonal_txt" class="label-text">Has testimonial(s)</label>
-                                        <label class="switch testmonal-toggle">
-                                                <input class='toggleCheck' name="route" type="checkbox" id="testmonalCheckBox" value="false">
+                                <div class="testimonial filter-item">
+                                        <label id="testimonial_txt" class="label-text">Has testimonial(s)</label>
+                                        <label class="switch testimonial-toggle">
+                                                <input class='toggleCheck' name="route" type="checkbox" id="testimonialCheckBox" value="false">
                                                 <span class="slider round"></span>
                                         </label>
                                 </div>
-                                <div class="apply-filter">
-                                        <button class="applyfltrbtn apply-flt-disabled" value='0'>Apply filters</button>
+                                <div class="apply-filter filter-item">
+                                        <button class="applyfltrbtn primary btn-orange" value='0'>Apply filters</button>
                                 </div>
                         </div>
                 </div>
