Allow cancel from comp-copy dialog

--- a/src/app/pages/details/request-form/request-form.html
+++ b/src/app/pages/details/request-form/request-form.html
@@ -36,7 +36,7 @@
             <else>
                 <div class="button-row">
                     <button class="primary" disabled="{model.salesforceTitle ? null : ''}">Request iBook</button>
-                    <button type="cancel">Cancel</button>
+                    <button type="reset">Cancel</button>
                 </div>
             </if>
         </form>
