--- a/src/app/pages/impact-dev/map/map.html
+++ b/src/app/pages/impact-dev/map/map.html
@@ -58,7 +58,7 @@
                                         </label>
                                 </div>
                                 <div class="apply-filter">
-                                        <button class="applyfltrbtn" value='0'>Apply filters</button>
+                                        <button class="applyfltrbtn apply-flt-disabled" value='0'>Apply filters</button>
                                 </div>
                         </div>
                 </div>
